--- a/lte/gateway/docker/mme/Dockerfile.rhel8
+++ b/lte/gateway/docker/mme/Dockerfile.rhel8
@@ -379,9 +379,6 @@ COPY ./ $MAGMA_ROOT
 # Build MME executables
 RUN ldconfig --verbose && \
     export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/lib/pkgconfig/ && \
-    # temporary warnings not error when compiling
-    cd $MAGMA_ROOT/ && \
-    patch -p1 < $MAGMA_ROOT/lte/gateway/c/oai/patches/CMake-warnings-not-errors.patch && \
     cd $MAGMA_ROOT/lte/gateway && \
     echo $FEATURES && \ 
     make build_oai && \
@@ -454,7 +451,7 @@ ENV C_BUILD=/build/c
 
 # Install a few tools (may not be necessary later on)
 ENV TZ=Europe/Paris
-RUN yum update && \
+RUN yum update -y && \
     yum -y install --enablerepo="ubi-8-codeready-builder" \
       libubsan \
       libasan \
