--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -893,6 +893,7 @@ jobs:
       SWAGGER_CODEGEN_JAR: /home/circleci/project/.codegen/swagger-codegen-cli.jar
     steps:
       - checkout
+      - python/set_version
       - build/determinator:
           <<: *lte_build_verify
       - run: mkdir -p /var/tmp/test_results
