--- a/orc8r/cloud/docker/docker-compose.override.yml
+++ b/orc8r/cloud/docker/docker-compose.override.yml
@@ -33,5 +33,10 @@ services:
       POSTGRES_USER: magma_test
       POSTGRES_PASSWORD: magma_test
       POSTGRES_DB: magma_test
-    command: ["postgres", "-c", "log_statement=all"]
+    command:
+      - "postgres"
+      - "-c"
+      - "log_duration=true"
+      - "-c"
+      - "log_statement=all"
     restart: always
