--- a/orc8r/cloud/docker/docker-compose.yml
+++ b/orc8r/cloud/docker/docker-compose.yml
@@ -44,6 +44,9 @@ services:
 
   postgres:
     image: postgres
+    # Default is 64mb
+    # Ref: https://stackoverflow.com/questions/30210362/how-to-increase-the-size-of-the-dev-shm-in-docker-container
+    shm_size: '256mb'
     ports:
       - 5432:5432/tcp
     volumes:
@@ -52,6 +55,12 @@ services:
       POSTGRES_USER: magma_dev
       POSTGRES_PASSWORD: magma_dev
       POSTGRES_DB: magma_dev
+    command:
+      - "postgres"
+      - "-c"
+      - "log_duration=true"
+#      - "-c"
+#      - "log_statement=all"
     restart: always
 
   maria:
