Specify orc8r db dialect and port in tf charts
Signed-off-by: Andrei Lee <andreilee@fb.com>

--- a/orc8r/cloud/helm/orc8r/charts/nms/values.yaml
+++ b/orc8r/cloud/helm/orc8r/charts/nms/values.yaml
@@ -30,10 +30,11 @@ magmalte:
     port: 8081
     mapbox_access_token: ""
     mysql_host: mariadb.magma.svc.cluster.local
+    mysql_port: 5432
     mysql_db: magma
     mysql_user: magma
     mysql_pass: password
-    mysql_dialect: mysql
+    mysql_dialect: postgres
     grafana_address: orc8r-user-grafana:3000
 
   labels: {}
