fix install gateway scripts and env files
Signed-off-by: Vitalii Kostenko <vitalii@freedomfi.com>

--- a/orc8r/gateway/docker/.env
+++ b/orc8r/gateway/docker/.env
@@ -12,6 +12,7 @@
 COMPOSE_PROJECT_NAME=magmad
 DOCKER_REGISTRY=magmad_
 IMAGE_VERSION=latest
+GIT_HASH=master
 BUILD_CONTEXT=../../../
 
 ROOTCA_PATH=../../../.cache/test_certs/rootCA.pem
