--- a/feg/gateway/docker/.env
+++ b/feg/gateway/docker/.env
@@ -14,6 +14,7 @@ DOCKER_REGISTRY=feg_
 DOCKER_USERNAME=
 DOCKER_PASSWORD=
 IMAGE_VERSION=latest
+GIT_HASH=master
 BUILD_CONTEXT=../../../
 
 ROOTCA_PATH=../../../.cache/test_certs/rootCA.pem
