[DevExp] Normalize Ubuntu 20.04 Dockerfiles
Signed-off-by: Scott Harrison Moeller <smoeller@fb.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -47,6 +47,7 @@ RUN echo "Install general purpose packages" && \
         automake \
         build-essential \
         ca-certificates \
+        clang-11 \
         clang-format-7 \
         clang-format-11 \
         clang-tidy-11 \
@@ -58,7 +59,9 @@ RUN echo "Install general purpose packages" && \
         git \
         gnupg \
         golang \
+        libclang-11-dev \
         libgmp3-dev \
+        libpcap-dev \
         libssl-dev \
         libtool \
         make \
@@ -71,7 +74,6 @@ RUN echo "Install general purpose packages" && \
         rubygems \
         ruby-dev \
         software-properties-common \
-        tig \
         tzdata \
         unzip \
         vim \
@@ -181,6 +183,7 @@ RUN wget https://liblfds.org/downloads/liblfds%20release%207.1.0%20source.tar.bz
     cd liblfds/liblfds7.1.0/liblfds710/build/gcc_gnumake/ && \
     make -j`nproc` && \
     make ar_install && \
+    cd / && \
     rm -rf liblfds
 
 ##### libgtpnl
@@ -193,6 +196,7 @@ RUN git clone https://git.osmocom.org/libgtpnl && \
     make -j`nproc` && \
     make install && \
     ldconfig && \
+    cd / && \
     rm -rf libgtpnl
 
 #####  asn1c
@@ -204,7 +208,6 @@ RUN git clone https://gitlab.eurecom.fr/oai/asn1c.git && \
     make -j`nproc` && \
     make install && \
     ldconfig
-
 
 ## Install Fmt (Folly Dep)
 RUN git clone https://github.com/fmtlib/fmt.git && cd fmt && \
@@ -239,6 +242,37 @@ RUN cd /usr/src/googletest && \
     make install && \
     ldconfig -v
 
+#### libtins is required to build the connection_tracker
+RUN git clone --branch v4.3 https://github.com/mfontanini/libtins.git && \
+    cd libtins && \
+    mkdir build && \
+    cd build && \
+    cmake ../ -DLIBTINS_ENABLE_CXX11=1 && \
+    make -j`nproc` && \
+    make install && \
+    cd / && \
+    rm -rf libtins
+
+###### Install Include What You Use for c/cpp header include fixup tooling
+# Tag 0.15 tracks Clang 11.0 per https://github.com/include-what-you-use/include-what-you-use/tags
+RUN git clone https://github.com/include-what-you-use/include-what-you-use && \
+    cd include-what-you-use && \
+    git checkout 0.15 && \
+    cd .. && \
+    mkdir build_iwyu && cd build_iwyu && \
+    cmake -G "Unix Makefiles" -DIWHYU_LLVM_ROOT_PATH=/usr/lib/llvm-11 ../include-what-you-use/ && \
+    make && \
+    make install && \
+    cd / && \
+    rm -rf include-what-you-use && \
+    rm -rf build_liwyu
+
+#### libfluid is requird to build MME with OVS support
+COPY third_party /tmp/third_party/
+RUN /tmp/third_party/build/bin/libfluid_build.sh && \
+     find . -name magma-libfluid_0.1* -exec dpkg -i {} \; && \
+     rm -rf /tmp/*
+
 ##### FreeDiameter
 COPY lte/gateway/c/oai/patches/ /tmp/
 RUN git clone https://github.com/OPENAIRINTERFACE/opencord.org.freeDiameter.git freediameter && \
@@ -251,9 +285,3 @@ RUN git clone https://github.com/OPENAIRINTERFACE/opencord.org.freeDiameter.git 
     make install && \
     cd / && \
     rm -rf freediameter
-
-#### libfluid is requird to build MME with OVS support
-COPY third_party /tmp/third_party/
-RUN /tmp/third_party/build/bin/libfluid_build.sh && \
-     find . -name magma-libfluid_0.1* -exec dpkg -i {} \; && \
-     rm -rf /tmp/*
