--- a/orc8r/cloud/configs/service_registry.yml
+++ b/orc8r/cloud/configs/service_registry.yml
@@ -96,7 +96,7 @@ services:
       orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
-        /magma/v1/networks/logs,
+        /magma/v1/networks/:network_id/logs,
         /magma/v1/events,
 
   obsidian:
