--- a/orc8r/cloud/helm/orc8r/values.yaml
+++ b/orc8r/cloud/helm/orc8r/values.yaml
@@ -248,7 +248,7 @@ eventd:
       orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
-        /magma/v1/networks/logs,
+        /magma/v1/networks/:network_id/logs,
         /magma/v1/events,
 
 metricsd:
