--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -966,16 +966,19 @@ jobs:
           profile-name: artlee
       - run:
           command: |
-            echo export AWS_DEFAULT_REGION="us-east-1" >> $BASH_ENV
+            echo export AWS_DEFAULT_REGION="us-west-1" >> $BASH_ENV
             echo export AWS_ACCESS_KEY_ID="$(printenv AWS_FB_CRED)" >> $BASH_ENV
             echo export AWS_SECRET_ACCESS_KEY="$(printenv AWS_FB_SECRET)" >> $BASH_ENV
             pip install wheel
             pip install ansible
+            mkdir ~/magma-experimental
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
-            ansible-playbook build-provision.yaml --tags devopsAgw,inventory
-            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"
-            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
-            ansible-playbook ami-init.yaml
+            cp -r * ~/magma-experimental
+            ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey: $AWS_ACCESS_KEY_ID" -e "awsSecretKey: $AWS_SECRET_ACCESS_KEY"
+            ansible-playbook build-provision.yaml --tags devopsAgw,inventory  -e "awsAccessKey: $AWS_ACCESS_KEY_ID" -e "awsSecretKey: $AWS_SECRET_ACCESS_KEY"
+            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "awsAccessKey: $AWS_ACCESS_KEY_ID" -e "awsSecretKey: $AWS_SECRET_ACCESS_KEY"
+            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin  -e "awsAccessKey: $AWS_ACCESS_KEY_ID" -e "awsSecretKey: $AWS_SECRET_ACCESS_KEY"
+            ansible-playbook ami-init.yaml  -e "awsAccessKey: $AWS_ACCESS_KEY_ID" -e "awsSecretKey: $AWS_SECRET_ACCESS_KEY"
 #      - magma_slack_notify
 
   ## CWF OPERATOR
