--- a/experimental/cloudstrapper/playbooks/roles/vars/build.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/build.yaml
@@ -6,9 +6,9 @@ buildOrc8rLabel: helmtest
 buildHelmRepo: helmtest
 
 #Build defaults
-buildAwsRegion: ap-northeast-1
+buildAwsRegion: us-west-1
 #AZ in same region as above
-buildAwsAz: ap-northeast-1a
+buildAwsAz: us-west-1
 buildInstanceType: t2.xlarge
 buildGwInstanceType: t2.medium
 
@@ -21,8 +21,8 @@ buildUbuntuAmi: ami-0f2dd5fc989207c82
 
 #Debian 4.9.0.9 AMI n us-east-2:  ami-0c305b7817e9fd559
 #Debian 4.9.0.9 AMI n ap-northeast-1: ami-0aac5cd08e351ff0f
-buildDebianAmi: ami-0aac5cd08e351ff0f
-buildAgwAmiName: testImgAgw14
+buildDebianAmi: ami-0e7b52505c766bf98
+buildAgwAmiName: imgMagmaDebian4909fromTokyo
 
 buildControlRegistry: controller
 buildNginxRegistry: nginx
