--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -964,14 +964,24 @@ jobs:
       - python/set_version
       - aws-cli/setup:
           profile-name: artlee
+          parameters:
+  aws-access-key-id:
+    default: AWS_FB_CREDS
+    type: env_var_name
+  aws-region:
+    default: AWS_DEFAULT_REGION
+    type: env_var_name
+  aws-secret-access-key:
+    default: AWS_FB_SECRET
+    type: env_var_name
       - run:
           command: |
             echo export AWS_DEFAULT_REGION="us-west-1" >> $BASH_ENV
             echo export AWS_ACCESS_KEY_ID="$(printenv AWS_FB_CRED)" >> $BASH_ENV
             echo export AWS_SECRET_ACCESS_KEY="$(printenv AWS_FB_SECRET)" >> $BASH_ENV
             pip install wheel
+            pip install botocore
             pip install ansible
-            pip install boto3
             mkdir ~/magma-experimental
             mkdir ~/magma-experimental/files
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
