--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -962,17 +962,7 @@ jobs:
     steps:
       - checkout
       - python/set_version
-      - aws-cli:
-          parameters:
-            aws-access-key-id:
-             default: AWS_FB_CREDS
-             type: env_var_name
-            aws-region:
-             default: AWS_DEFAULT_REGION
-             type: env_var_name
-            aws-secret-access-key:
-             default: AWS_FB_SECRET
-             type: env_var_name
+      - aws-cli/setup:
       - run:
           command: |
             echo export AWS_DEFAULT_REGION="us-west-1" >> $BASH_ENV
