--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -962,7 +962,7 @@ jobs:
     steps:
       - checkout
       - python/set_version
-      - aws-cli/setup:
+      - aws-cli/setup
       - run:
           command: |
             echo export AWS_DEFAULT_REGION="us-west-1" >> $BASH_ENV
