--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,9 @@ orbs:
   artifactory: circleci/artifactory@0.0.7
   codecov: codecov/codecov@1.1.3
   aws-cli: circleci/aws-cli@2.0.0
-
+        parameters:
+          aws-secret-access-key:
+            default: AWS_FB_SECRET
   python:
     commands:
       set_version:
