--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ executors:
 orbs:
   artifactory: circleci/artifactory@0.0.7
   codecov: codecov/codecov@1.1.3
-  aws-cli: circleci/aws-cli@2.0.0
+  aws-cli: 
         parameters:
           aws-secret-access-key:
             default: AWS_FB_SECRET
@@ -971,9 +971,7 @@ jobs:
             echo export AWS_ACCESS_KEY_ID="$(printenv AWS_FB_CRED)" >> $BASH_ENV
             echo export AWS_SECRET_ACCESS_KEY="$(printenv AWS_FB_SECRET)" >> $BASH_ENV
             pip install wheel
-            pip install botocore
             pip install boto3
-            pip install ansible-playbook
             pip install ansible
             mkdir ~/magma-experimental
             mkdir ~/magma-experimental/files
