--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,8 @@ executors:
 orbs:
   artifactory: circleci/artifactory@0.0.7
   codecov: codecov/codecov@1.1.3
-  aws-cli: 
-        parameters:
-          aws-secret-access-key:
-            default: AWS_FB_SECRET
+  aws-cli: circleci/aws-cli@2.0
+
   python:
     commands:
       set_version:
