[AGW][MME][RHEL8] Fix event size
Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/ci-scripts/docker/Dockerfile.mme.ci.rhel8
+++ b/ci-scripts/docker/Dockerfile.mme.ci.rhel8
@@ -36,7 +36,7 @@ RUN yum update -y && \
       libubsan \
       libasan \
       psmisc \
-      psmisc \
+      tcpdump \
       openssl \
       net-tools \
       tzdata && \
